# UnitTesting

./: CMakeLists.txt
include/: Chat.h  ChatRegistry.h  Message.h  User.h
src/: Chat.cpp  ChatRegistry.cpp  Message.cpp  User.cpp
test/: ChatRegistryTest.cpp  ChatTest.cpp  MessageTest.cpp  UserTest.cpp  main_test.cpp
